# ai-arena-recap

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: Caddyfile  ai-arena-recap.service  update.sh
scripts/: regen_favicon.py
src/ai_arena_recap/: api_client.py  cli.py  config.py  db.py  models.py
src/ai_arena_recap/sync/: bots.py  common.py  competition.py  maps.py  replays.py  rounds.py  runner.py
src/ai_arena_recap/web/: app.py  deps.py  queries.py  rankings.py
src/ai_arena_recap/web/routes/: api.py  bot.py  ladder.py  match.py  rankings.py
src/ai_arena_recap/web/static/: app.js  styles.css
src/ai_arena_recap/web/templates/: _macros.html  base.html  bot.html  ladder.html  match.html  rankings.html
tests/: conftest.py  test_api.py  test_api_client.py  test_helpers.py  test_page_views.py  test_queries.py  test_rankings.py  test_replays.py  test_sync.py
