[project]
name = "ai-arena-recap"
version = "0.1.0"
description = "Website summarizing StarCraft 2 bot vs bot matches from aiarena.net"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "httpx>=0.28",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.6",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "typer>=0.15",
]

[project.scripts]
ai-arena-recap = "ai_arena_recap.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_arena_recap"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# `l` is used as the standard W/L/T loss-count alias throughout the codebase.
ignore = ["E741"]
